route-files/feroute.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx-route
  namespace: music-game
spec:
  to:
    kind: Service
    name: frontend-html-service
  port:
    targetPort: 8080
