route-files/nodejs-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nodejs-route
  namespace: music-game
spec:
  to:
    kind: Service
    name: nodejs-service
  port:
    targetPort: 3000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
